@@ -1,3 +1,8 @@
+Thu Dec 28 21:14:45 2006  Tim Janik  <timj@imendio.com>
+
+	* glib/gslice.c: removed pthread-dependant debugging bits, the code
+	was already converted to GMutex. this obsoletes Tor's recent fixups.
+
 2006-12-28  Tor Lillqvist  <tml@novell.com>
 
 	* glib/gutils.h (G_WIN32_DLLMAIN_FOR_DLL_NAME)
